--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2190,6 +2190,8 @@ input, select, textarea {
 		background-color: transparent;
 		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
 		color: #000000 !important;
+		padding-top: 5px;
+		background-color: #FFFF84;
 	}
 
 		input[type="submit"]:hover,
@@ -8603,10 +8605,13 @@ input, select, textarea {
 				box-shadow: none !important;
 			}
 
+		
 			.boneco-construtor{
+				margin-top: -80px;
 				width: 150px;
 				height: 250px;
 			}
+		
 
 			ul{
 				padding: 5px 20px;
@@ -8623,9 +8628,12 @@ input, select, textarea {
 			}
 
 			h1{
+				border-radius: 10px;
 				margin: 0px;
+				background-color: #ffff84;
+				width: 460px;
 			}
-
+			
 			h2{
 				color: darkblue;
 				margin: 0px;
@@ -8644,7 +8652,6 @@ input, select, textarea {
 			@media(max-width:500px){
 				.boneco-construtor{
 					padding-left: 0px;
-					
 					width: 120px;
 				}
 				p{
@@ -8659,7 +8666,15 @@ input, select, textarea {
 				}
 
 				i{
-				
 					font-size: 15px;
+					
 				}
+
+				h1{
+					border-radius: 10px;
+					margin: 0px;
+					background-color: #ffff84;
+					width: 280px;
+				}
+			
 			}
